# LocalScript

./: .gitignore  README.md  all-services.txt  docker-compose.yml  llm-service-main.txt  run.bat  run.ps1  run.py  run.sh  sandbox-service-all-files.txt  sandbox_client.py  yest.txt
.qwen/: settings.json
docs/: c4-architecture.md  pipeline-ascii.md  тест-запросы.md
llm-service/: .env.example  Dockerfile  requirements.txt
llm-service/app/: config.py  json_input_parser.py  main.py  models.py  old_main.py  ollama_client.py  parse_lua_to_json.py  pipeline.py  plan_parser.py  prompts.py  qdrant_delete.py  rag_func.py  run_model.py  sandbox_client.py
llm-service/app/clients/: __init__.py  ollama.py  sandbox.py
llm-service/app/schemas/: __init__.py  models.py
llm-service/app/services/: generation.py  review.py
llm-tui/: .gitignore  Cargo.toml  Dockerfile
llm-tui/src/: api.rs  app.rs  config.rs  main.rs  ui.rs
qdrant_data/: meta.json  raft_state.json
qdrant_data/collection/lua_patterns/: storage.sqlite
sandbox-service/: Cargo.toml  Dockerfile
sandbox-service/.qwen/: settings.json  settings.json.orig
sandbox-service/src/: error.rs  main.rs  models.rs
sandbox-service/src/ast/: extractor.rs  mod.rs  parser.rs  safety.rs
sandbox-service/src/executor/: sandbox.rs
sandbox-service/src/formatter/: mod.rs
sandbox-service/src/routes/: pipeline.rs
