[package]
name = "sandbox-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
tree-sitter = "0.25"
tree-sitter-lua = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
